# dart-ffitest

./: .gitignore  compile_commands.json  generated_bindings.dart  pubspec.yaml  web_build.sh  web_run.sh
.cache/clangd/index/: bindings.cpp.08636198B3D75838.idx  hello.c.10A722189AAC72B6.idx  hello.h.4060ADD3FEE93065.idx
csrc/: CMakeLists.txt  bindings.cpp  hello.c  hello.h  shell.html
